{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 560,
  "lineage": "544c077d-1f55-8653-47ce-474500cbbf17",
  "resources": [
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:internet-gateway/igw-0ec99226deb19afd7",
            "id": "igw-0ec99226deb19afd7",
            "owner_id": "127996279847",
            "region": "us-east-2",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:127996279847:loadbalancer/app/application-lb/4abd394c942dab04",
            "arn_suffix": "app/application-lb/4abd394c942dab04",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-lb-1521913131.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:127996279847:loadbalancer/app/application-lb/4abd394c942dab04",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-lb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-07e177c274e0228e9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0226d10dcc876553d"
              },
              {
                "subnet_id": "subnet-068776cc8c1ca28fe"
              }
            ],
            "subnets": [
              "subnet-0226d10dcc876553d",
              "subnet-068776cc8c1ca28fe"
            ],
            "tags": {
              "Environment": "application_lb"
            },
            "tags_all": {
              "Environment": "application_lb"
            },
            "vpc_id": "vpc-084218cc5e8daa4b8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:127996279847:loadbalancer/app/application-lb/4abd394c942dab04"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.load_balancer_security_group",
            "module.subnet.aws_subnet.web_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:127996279847:listener/app/application-lb/4abd394c942dab04/bac9f9b7f7ee7a3d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:127996279847:targetgroup/webtg-20260226071841611200000001/9389b89da209d4ba",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:127996279847:listener/app/application-lb/4abd394c942dab04/bac9f9b7f7ee7a3d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:127996279847:loadbalancer/app/application-lb/4abd394c942dab04",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:127996279847:listener/app/application-lb/4abd394c942dab04/bac9f9b7f7ee7a3d"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.application_lb",
            "module.load_balancer.aws_lb_target_group.web_target_group",
            "module.load_balancer.aws_security_group.load_balancer_security_group",
            "module.subnet.aws_subnet.web_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:127996279847:targetgroup/webtg-20260226071841611200000001/9389b89da209d4ba",
            "arn_suffix": "targetgroup/webtg-20260226071841611200000001/9389b89da209d4ba",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:127996279847:targetgroup/webtg-20260226071841611200000001/9389b89da209d4ba",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webtg-20260226071841611200000001",
            "name_prefix": "webtg-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web-target-group"
            },
            "tags_all": {
              "Name": "web-target-group"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:127996279847:targetgroup/webtg-20260226071841611200000001/9389b89da209d4ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:security-group/sg-07e177c274e0228e9",
            "description": "Allow HTTP from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e177c274e0228e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load_balancer_security_group",
            "name_prefix": "",
            "owner_id": "127996279847",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load_balancer_security_group"
            },
            "tags_all": {
              "Name": "load_balancer_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "sg-07e177c274e0228e9",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_and_app_rtb",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06dcbce26f8030892",
            "arn": "arn:aws:ec2:us-east-2:127996279847:elastic-ip/eipalloc-06dcbce26f8030892",
            "domain": "vpc",
            "id": "eipalloc-06dcbce26f8030892",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-16-58-25-148.us-east-2.compute.amazonaws.com",
            "public_ip": "16.58.25.148",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_subnet.web_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_and_app_rtb",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:route-table/rtb-00467ef4958e87309",
            "id": "rtb-00467ef4958e87309",
            "owner_id": "127996279847",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "database-rt"
            },
            "tags_all": {
              "Name": "database-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "rtb-00467ef4958e87309",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_and_app_rtb",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d45e037b7b9ba7cc",
            "region": "us-east-2",
            "route_table_id": "rtb-00467ef4958e87309",
            "subnet_id": "subnet-00271fbaf6606f300"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat_and_app_rtb.aws_route_table.database_rt",
            "module.subnet.aws_subnet.db_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060e0a9aaa167a67e",
            "region": "us-east-2",
            "route_table_id": "rtb-00467ef4958e87309",
            "subnet_id": "subnet-0c4113da7a2741db3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat_and_app_rtb.aws_route_table.database_rt",
            "module.subnet.aws_subnet.db_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:network-acl/acl-0a292f2595e98bdf6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.5.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.6.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 3306
              }
            ],
            "id": "acl-0a292f2595e98bdf6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "127996279847",
            "region": "us-east-2",
            "subnet_ids": [],
            "tags": {
              "Name": "app-nacl"
            },
            "tags_all": {
              "Name": "app-nacl"
            },
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:network-acl/acl-028a21f4886c4a0ca",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.3.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.4.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 65535
              }
            ],
            "id": "acl-028a21f4886c4a0ca",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.3.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.4.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 3306
              }
            ],
            "owner_id": "127996279847",
            "region": "us-east-2",
            "subnet_ids": [],
            "tags": {
              "Name": "db-nacl"
            },
            "tags_all": {
              "Name": "db-nacl"
            },
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "web_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:network-acl/acl-02bc3bf112ee5d071",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-02bc3bf112ee5d071",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "127996279847",
            "region": "us-east-2",
            "subnet_ids": [],
            "tags": {
              "Name": "web_nacl"
            },
            "tags_all": {
              "Name": "web_nacl"
            },
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "app_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c3f4a247f0bcf5c4",
            "network_acl_id": "acl-0a292f2595e98bdf6",
            "region": "us-east-2",
            "subnet_id": "subnet-088c02c90f9f6215b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_acl.aws_network_acl.app_nacl",
            "module.subnet.aws_subnet.app_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-066540b91d8694262",
            "network_acl_id": "acl-0a292f2595e98bdf6",
            "region": "us-east-2",
            "subnet_id": "subnet-039e23751fbb4239a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_acl.aws_network_acl.app_nacl",
            "module.subnet.aws_subnet.app_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "db_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0fda337072fc371e4",
            "network_acl_id": "acl-028a21f4886c4a0ca",
            "region": "us-east-2",
            "subnet_id": "subnet-00271fbaf6606f300"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_acl.aws_network_acl.db_nacl",
            "module.subnet.aws_subnet.db_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-022e4c45d6ff89939",
            "network_acl_id": "acl-028a21f4886c4a0ca",
            "region": "us-east-2",
            "subnet_id": "subnet-0c4113da7a2741db3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_acl.aws_network_acl.db_nacl",
            "module.subnet.aws_subnet.db_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "web_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0dcf41610ba0d4d5b",
            "network_acl_id": "acl-02bc3bf112ee5d071",
            "region": "us-east-2",
            "subnet_id": "subnet-0226d10dcc876553d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_acl.aws_network_acl.web_nacl",
            "module.subnet.aws_subnet.web_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f447bc7ba03fdade",
            "network_acl_id": "acl-02bc3bf112ee5d071",
            "region": "us-east-2",
            "subnet_id": "subnet-068776cc8c1ca28fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_acl.aws_network_acl.web_nacl",
            "module.subnet.aws_subnet.web_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:route-table/rtb-01ada31857912aa22",
            "id": "rtb-01ada31857912aa22",
            "owner_id": "127996279847",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec99226deb19afd7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-rt"
            },
            "tags_all": {
              "Name": "web-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "rtb-01ada31857912aa22",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c03eb2545c878379",
            "region": "us-east-2",
            "route_table_id": "rtb-01ada31857912aa22",
            "subnet_id": "subnet-0226d10dcc876553d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.internet_gateway",
            "module.route_table.aws_route_table.web_subnet",
            "module.subnet.aws_subnet.web_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04edfedf90a6f01be",
            "region": "us-east-2",
            "route_table_id": "rtb-01ada31857912aa22",
            "subnet_id": "subnet-068776cc8c1ca28fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.internet_gateway",
            "module.route_table.aws_route_table.web_subnet",
            "module.subnet.aws_subnet.web_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:security-group/sg-0b63201b71887a98c",
            "description": "Allow traffic only from Web SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound to DB and internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b63201b71887a98c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App traffic from Web SG",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a15ee6ea49008e69"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Web SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a15ee6ea49008e69"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "127996279847",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app_security_group"
            },
            "tags_all": {
              "Name": "app_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "sg-0b63201b71887a98c",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.web-security_group",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:security-group/sg-0e4fd8c21a22e6b79",
            "description": "Allow MySQL only from App SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound responses",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4fd8c21a22e6b79",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from App SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b63201b71887a98c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "127996279847",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database_security_group"
            },
            "tags_all": {
              "Name": "database_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "sg-0e4fd8c21a22e6b79",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.app_security_group",
            "module.security_group.aws_security_group.web-security_group",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:security-group/sg-0a15ee6ea49008e69",
            "description": "Allow HTTP from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a15ee6ea49008e69",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-security_group",
            "name_prefix": "",
            "owner_id": "127996279847",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-security_group"
            },
            "tags_all": {
              "Name": "web-security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "sg-0a15ee6ea49008e69",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:subnet/subnet-088c02c90f9f6215b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088c02c90f9f6215b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127996279847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "app-0"
            },
            "tags_all": {
              "Name": "app-0"
            },
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "subnet-088c02c90f9f6215b",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:subnet/subnet-039e23751fbb4239a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039e23751fbb4239a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127996279847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "app-1"
            },
            "tags_all": {
              "Name": "app-1"
            },
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "subnet-039e23751fbb4239a",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:subnet/subnet-00271fbaf6606f300",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00271fbaf6606f300",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127996279847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "db-0"
            },
            "tags_all": {
              "Name": "db-0"
            },
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "subnet-00271fbaf6606f300",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:subnet/subnet-0c4113da7a2741db3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4113da7a2741db3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127996279847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "db-1"
            },
            "tags_all": {
              "Name": "db-1"
            },
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "subnet-0c4113da7a2741db3",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:subnet/subnet-0226d10dcc876553d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0226d10dcc876553d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127996279847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "web-0"
            },
            "tags_all": {
              "Name": "web-0"
            },
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "subnet-0226d10dcc876553d",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:subnet/subnet-068776cc8c1ca28fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068776cc8c1ca28fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127996279847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "web-1"
            },
            "tags_all": {
              "Name": "web-1"
            },
            "vpc_id": "vpc-084218cc5e8daa4b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "subnet-068776cc8c1ca28fe",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127996279847:vpc/vpc-084218cc5e8daa4b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09146e1989c347549",
            "default_route_table_id": "rtb-0a71ab16714d59e61",
            "default_security_group_id": "sg-0cf560db55eb9a324",
            "dhcp_options_id": "dopt-0e6434c2554521d76",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084218cc5e8daa4b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a71ab16714d59e61",
            "owner_id": "127996279847",
            "region": "us-east-2",
            "tags": {
              "Name": "new-vpc"
            },
            "tags_all": {
              "Name": "new-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "127996279847",
            "id": "vpc-084218cc5e8daa4b8",
            "region": "us-east-2"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}